# cli-typer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  cli_typer.py  pyproject.toml
.github/workflows/: ci.yml  debian.yml  publish.yml
debian/: changelog  control  copyright  watch
packaging/homebrew/: cli-typer.rb
scripts/: build_deb.sh
