[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-typer"
version = "0.1.0"
description = "Curses-based terminal typing practice tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Amudan Thangavel", email = "amudanthangavel@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["typing", "terminal", "curses", "practice", "WPM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  # On Windows, pull in curses support automatically
  "windows-curses; platform_system == 'Windows'",
]

[project.scripts]
cli-typer = "cli_typer:main"

[tool.setuptools]
py-modules = ["cli_typer"]

# Optional: keep Ruff config minimal; CI passes explicit rules
[tool.ruff]
line-length = 100
target-version = "py38"

[project.urls]
Homepage = "https://github.com/AmudanThangavel/cli-typer"
Issues = "https://github.com/AmudanThangavel/cli-typer/issues"
Source = "https://github.com/AmudanThangavel/cli-typer"
Changelog = "https://github.com/AmudanThangavel/cli-typer/releases"
